// user_service.proto
syntax = "proto3";

package user;

option go_package = "./pb";

import "user.proto";

service UserService {
  rpc GetUserById (UserRequest) returns (User);
}

message UserRequest {
  int64 user_id = 1;
}
